# HangmanSocket

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  sarif.yml
client/: CMakeLists.txt
client/data/: res.rc
client/resource/: info.rc
client/src/: main.cpp
docs/: Doxyfile  Makefile
docs/latex/: annotated.tex  class_client_1_1_hangman_client.tex  class_server_1_1_hangman_server.tex  client_2src_2main_8cpp_source.tex  client_8cpp_source.tex  client_8h_source.tex  cmake-build-debug_2_c_make_files_23_824_82_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.tex  cmake-build-debug_2_c_make_files_23_824_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.tex  cmake-build-release_2_c_make_files_23_824_82_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.tex  cmake-build-release_2_c_make_files_23_824_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.tex  files.tex  protocol_8h_source.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc  server_2src_2main_8cpp_source.tex  server_8cpp_source.tex  server_8h_source.tex  string__utils_8h_source.tex  struct_client_1_1_hangman_client_1_1server__address.tex  struct_client_1_1_join_message.tex  struct_client_1_1_letter_message.tex  struct_client_1_1_message.tex  struct_client_1_1_short_phrase_message.tex  struct_server_1_1_hangman_server_1_1address.tex  struct_server_1_1_message.tex  struct_server_1_1_other_one_turn_message.tex  struct_server_1_1_player.tex  struct_server_1_1_update_attempts_message.tex  struct_server_1_1_update_user_message.tex  struct_server_1_1_update_word_message.tex  struct_terminal_size.tex  terminal__utils_8h_source.tex  union_client_1_1_server_message_union.tex
docs/source/: conf.py  index.rst
lib/Hangman/: client.cpp  client.h  protocol.h  server.cpp  server.h  server.pxd  string_utils.h  terminal_utils.h  utils.h
server/: CMakeLists.txt
server/data/: data.txt
server/resource/: info.rc
server/src/: main.cpp
