set(SERVER_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

IF (MINGW)
    set(APP_ICON_RESOURCE_WINDOWS "${CMAKE_CURRENT_SOURCE_DIR}/data/res.rc")
    set(CMAKE_CXX_STANDARD_LIBRARIES "-lws2_32 ${CMAKE_CXX_STANDARD_LIBRARIES}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS} -static")
    add_executable(server ${SERVER_SOURCE_DIR}/main.cpp ${HANGMAN_LIB}/server.cpp ${HANGMAN_LIB}/utils.h ${APP_ICON_RESOURCE_WINDOWS})
else()
    add_executable(server ${SERVER_SOURCE_DIR}/main.cpp ${HANGMAN_LIB}/server.cpp ${HANGMAN_LIB}/utils.h)
endif()

install(TARGETS server RUNTIME DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/bin)
